# orthomcl

./: .gitignore  README.md  pyproject.toml
src/orthomcl/: __init__.py  orthomcl.py
src/orthomcl/__assets__/: organisms.json
